Made DPD UK, refactored USPS, moved common parts to tools. HKPOST data retrieve ready, need to add HTTP parser and adopt tests.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
 	"dependencies": {
 		"mocha": "latest",
 		"underscore": "latest",
-		"should": "latest"
+		"should": "latest",
+		"request": "latest",
+		"xml2js": "latest",
+		"cheerio": "latest"
 	},
 	"devDependencies": {
 		"mocha": "latest",
